fix: missing margin on evidence checkbox

--- a/src/containers/action-modal/components/submit-evidence/submit-evidence.scss
+++ b/src/containers/action-modal/components/submit-evidence/submit-evidence.scss
@@ -50,7 +50,7 @@
   }
 
   &-checkboxExtra {
-    margin-top: 12px;
+    margin: 12px 0;
   }
 
   &-options {
